--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Todd",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "request": "^2.87.0"
